feat: add Vitest testing framework integration
- Add @repo/vitest-config package with shared configuration
- Configure test scripts and Vitest workspace setup
- Fix turbo.json configuration for test pipeline
- Add coverage reporting and UI tools

--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,11 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "test": {
+      "inputs": ["$TURBO_DEFAULT$", "$TURBO_ROOT$/vitest.config.ts"],
+      "dependsOn": ["@repo/vitest-config#build"],
+      "outputs": ["coverage.json"]
     }
   }
 }
