feat: configure shadcn/ui integration in UI package
- Add shadcn/ui dependencies (class-variance-authority, clsx, tailwind-merge)
- Install Tailwind CSS 4.x with PostCSS configuration
- Add form handling libraries (react-hook-form, zod, @hookform/resolvers)
- Configure next-themes for dark/light mode support
- Set up Radix UI slot primitive and animation utilities
- Update package exports for hooks, components, and styles
- Add ESM module type configuration

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,16 +13,19 @@
   "dependencies": {
     "@workspace/ui": "workspace:*",
     "next": "^15.5.0",
+    "next-secure-headers": "^2.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@workspace/eslint-config": "workspace:*",
-    "@workspace/typescript-config": "workspace:*",
+    "@next/bundle-analyzer": "15.3.3",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.34.0",
     "typescript": "5.9.2"
-  }
+  },
+  "prettier": "@workspace/prettier-config"
 }
