--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,10 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@types/three": "^0.180.0",
+    "@react-three/postprocessing": "^3.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next-themes": "^0.4.6",
@@ -28,6 +32,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "7.57.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
     "tw-animate-css": "1.3.4",
     "zod": "3.25.56"
   },
