feat(build): configure development builds to not generate JS files
- Update contracts package: change build script from 'tsc' to 'tsc --noEmit'
- Add build:prod script for production builds that generate JS files
- Update vitest-config package: change build script from 'tsc' to 'tsc --noEmit'
- Add build:prod script for production builds
- Development builds now only perform type checking without file generation
- Production builds still available via build:prod scripts

--- a/tooling/vitest-config/package.json
+++ b/tooling/vitest-config/package.json
@@ -9,7 +9,8 @@
     "./ui": "./dist/configs/ui-config.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --noEmit",
+    "build:prod": "tsc",
     "dev": "tsc --watch",
     "collect-json-reports": "node dist/scripts/collect-json-outputs.js",
     "merge-json-reports": "nyc merge coverage/raw coverage/merged/merged-coverage.json",
