--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "preinstall": "pnpm run --filter @tooling/requirements-check requirements"
   },
   "devDependencies": {
-    "@workspace/vitest-config": "workspace:*",
     "@turbo/gen": "2.5.4",
+    "@workspace/vitest-config": "workspace:*",
     "prettier": "^3.6.2",
     "turbo": "^2.5.6",
-    "typescript": "5.9.2",
-    "vitest": "^3.2.4"
+    "typescript": "5.9.2"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
