--- a/turbo.json
+++ b/turbo.json
@@ -1,12 +1,12 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
-  "globalEnv": ["NEXT_PUBLIC_PUBLIC_API_URL"],
+  "globalEnv": ["NEXT_PUBLIC_API_URL", "NEXT_PUBLIC_QUIZ_URL"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -22,6 +22,15 @@
       "inputs": ["$TURBO_DEFAULT$", "$TURBO_ROOT$/vitest.config.ts"],
       "dependsOn": ["@workspace/vitest-config#build"],
       "outputs": ["coverage.json"]
+    },
+    "api#dev": {
+      "dependsOn": ["@workspace/contracts#build"],
+      "cache": false,
+      "persistent": true
+    },
+    "api#build": {
+      "dependsOn": ["@workspace/contracts#build"],
+      "outputs": ["dist/**"]
     }
   }
 }
